Fix background image not showing on deploy

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,7 +31,7 @@ main {
     height: 100%;
     padding-top: 3.5em;
     color: limegreen;
-    background-image: url('/assets/images/home-page.png');
+    background-image: url('assets/images/home-page.png');
     background-size: cover;
 }
 
